--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="action_bar">#009688</color>
     <color name="primary_text">#212121</color>
     <color name="secondary_text">#727272</color>
+    <color name="card_color">#FFFFFF</color>
+    <color name="activity_card">#FAFAFA</color>
+    <color name="transperency_black">#60000000</color>
 </resources>
