--- a/app/src/main/res/layout/notes_card.xml
+++ b/app/src/main/res/layout/notes_card.xml
@@ -12,23 +12,25 @@
         android:layout_height="match_parent">
 
         <TextView
+            android:id="@+id/noteName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Large Text"
-            android:id="@+id/noteName"
             android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true" />
+            android:layout_centerHorizontal="true"
+            android:fontFamily="sans-serif-light"
+            android:text="Large Text"
+            android:textAppearance="?android:attr/textAppearanceLarge" />
 
         <TextView
+            android:id="@+id/noteText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="Medium Text"
-            android:id="@+id/noteText"
-            android:layout_below="@+id/noteName"
             android:layout_alignParentStart="true"
+            android:layout_below="@+id/noteName"
             android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp" />
+            android:layout_marginRight="15dp"
+            android:fontFamily="sans-serif-light"
+            android:text="Medium Text"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
     </RelativeLayout>
 </android.support.v7.widget.CardView>
