--- a/app/src/main/res/layout/notes_layout.xml
+++ b/app/src/main/res/layout/notes_layout.xml
@@ -19,6 +19,16 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="@string/empty_notes"
+            android:fontFamily="sans-serif-light"
+            android:id="@+id/emptyNotes"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true" />
+
     </RelativeLayout>
 
     <android.support.design.widget.FloatingActionButton
