--- a/app/src/main/res/layout/methodic_list.xml
+++ b/app/src/main/res/layout/methodic_list.xml
@@ -1,15 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/card_view"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    card_view:cardBackgroundColor="@color/card_color"
-    card_view:cardElevation="5dp">
-
     <RelativeLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+    android:paddingTop="7dp"
+    android:paddingBottom="7dp">
 
         <TextView
             android:id="@+id/methodicName"
@@ -18,8 +13,10 @@
             android:fontFamily="sans-serif-light"
             android:text="Large Text"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true" />
+            android:autoText="false"
+            android:layout_alignTop="@+id/methodicImg"
+            android:layout_toEndOf="@+id/methodicImg"
+            android:layout_marginLeft="7dp" />
 
         <TextView
             android:id="@+id/methodicDescription"
@@ -30,7 +27,7 @@
             android:fontFamily="sans-serif-light"
             android:text="Medium Text"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:layout_marginLeft="5dp" />
+            android:layout_marginLeft="7dp" />
 
         <ImageView
             android:id="@+id/methodicImg"
@@ -39,6 +36,6 @@
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:scaleType="centerCrop"
-            android:src="@drawable/menu1" />
+            android:src="@drawable/menu1"
+            android:layout_marginLeft="7dp" />
     </RelativeLayout>
-</android.support.v7.widget.CardView>
