--- a/app/src/main/res/layout/methodic_card.xml
+++ b/app/src/main/res/layout/methodic_card.xml
@@ -30,18 +30,17 @@
             android:fontFamily="sans-serif-light"
             android:text="Medium Text"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:layout_marginLeft="5dp" />
+            android:layout_marginLeft="5dp"
+            android:maxLines="3"
+            android:ellipsize="end" />
 
         <ImageView
             android:id="@+id/methodicImg"
             android:layout_width="64dp"
             android:layout_height="64dp"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
             android:scaleType="centerCrop"
             android:src="@drawable/menu1"
             android:layout_marginLeft="5dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="5dp" />
+            android:layout_centerVertical="true" />
     </RelativeLayout>
 </android.support.v7.widget.CardView>
