--- a/app/src/main/res/layout/personal_layout.xml
+++ b/app/src/main/res/layout/personal_layout.xml
@@ -1,50 +1,178 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <ImageView
+        android:id="@+id/backgroundProfile"
         android:layout_width="match_parent"
         android:layout_height="150dp"
-        android:id="@+id/backgroundProfile"
+        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true" />
+        android:scaleType="centerCrop"
+        android:src="@drawable/menu" />
 
     <ImageView
+        android:id="@+id/profileImage"
         android:layout_width="90dp"
         android:layout_height="90dp"
-        android:id="@+id/profileImage"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="105dp" />
-    <TableLayout
-        android:layout_width="match_parent"
+
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fabSubject"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/profileImage"
-        android:id="@+id/tableLayout">
+        android:layout_marginLeft="60dp"
+        android:layout_marginTop="40dp"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/nameTextView" />
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fabMethodic"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/fabSubject"
+        android:layout_alignStart="@+id/fabSubject"
+        android:layout_marginTop="35dp" />
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fabAbout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/fabHelp"
+        android:layout_alignEnd="@+id/textView5"
+        android:layout_marginRight="60dp" />
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fabHelp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/fabSubject"
+        android:layout_centerHorizontal="true" />
 
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fabNotes"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/fabNew"
+        android:layout_alignStart="@+id/fabAbout" />
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fabNew"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/fabMethodic"
+        android:layout_alignStart="@+id/fabHelp" />
 
-            <ImageButton
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/imageButton" />
 
-            <ImageButton
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/imageButton2" />
 
-            <ImageButton
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/imageButton3"
-                android:layout_column="2" />
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/backgroundProfile"
+        android:layout_marginLeft="10dp"
+        android:fontFamily="sans-serif-light"
+        android:text="@string/zero5"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="@color/md_white_1000" />
 
-        </TableRow>
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/backgroundProfile"
+        android:layout_alignParentEnd="true"
+        android:fontFamily="sans-serif-light"
+        android:text="@string/zero"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="@color/md_white_1000" />
 
-    </TableLayout>
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/textView2"
+        android:layout_alignParentStart="true"
+        android:fontFamily="sans-serif-light"
+        android:text="@string/rate"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="@color/md_white_1000" />
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/textView3"
+        android:layout_alignParentEnd="true"
+        android:fontFamily="sans-serif-light"
+        android:text="@string/counr_subject"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="@color/md_white_1000" />
+
+    <TextView
+        android:id="@+id/nameTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/profileImage"
+        android:layout_centerHorizontal="true"
+        android:fontFamily="sans-serif-light"
+        android:text="Large Text"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Medium Text"
+        android:id="@+id/textView"
+        android:layout_below="@+id/fabSubject"
+        android:layout_toStartOf="@+id/profileImage" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Medium Text"
+        android:id="@+id/textView6"
+        android:layout_alignTop="@+id/textView"
+        android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Medium Text"
+        android:id="@+id/textView7"
+        android:layout_alignTop="@+id/textView6"
+        android:layout_toEndOf="@+id/textView6" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Medium Text"
+        android:id="@+id/textView8"
+        android:layout_below="@+id/fabMethodic"
+        android:layout_alignStart="@+id/textView" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Medium Text"
+        android:id="@+id/textView9"
+        android:layout_below="@+id/fabNew"
+        android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Medium Text"
+        android:id="@+id/textView10"
+        android:layout_below="@+id/fabNotes"
+        android:layout_alignStart="@+id/textView7" />
+
 
 </RelativeLayout>
