--- a/app/src/main/res/layout/personal_layout.xml
+++ b/app/src/main/res/layout/personal_layout.xml
@@ -11,7 +11,7 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:scaleType="centerCrop"
-        android:src="@drawable/menu" />
+        android:src="@drawable/header2" />
 
     <ImageView
         android:id="@+id/profileImage"
@@ -21,94 +21,200 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="105dp" />
 
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fabSubject"
+    <LinearLayout
+        android:id="@+id/subjectLiner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="60dp"
+        android:layout_below="@id/nameTextView"
+        android:layout_marginLeft="35dp"
         android:layout_marginTop="40dp"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/nameTextView" />
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fabMethodic"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/fabSubject"
-        android:layout_alignStart="@+id/fabSubject"
-        android:layout_marginTop="35dp" />
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fabAbout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/fabHelp"
-        android:layout_alignEnd="@+id/textView5"
-        android:layout_marginRight="60dp" />
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fabHelp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/fabSubject"
-        android:layout_centerHorizontal="true" />
+        android:orientation="vertical">
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fabNotes"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/fabNew"
-        android:layout_alignStart="@+id/fabAbout" />
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fabNew"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/fabMethodic"
-        android:layout_alignStart="@+id/fabHelp" />
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fabSubject"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal" />
+
+        <TextView
+            android:id="@+id/textSubject"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/subjects"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
+    </LinearLayout>
 
 
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/nameTextView"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="40dp"
+        android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/textView2"
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fabMethodic"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal" />
+
+        <TextView
+            android:id="@+id/textView6"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/methodics"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignEnd="@+id/righLiner"
+        android:layout_alignTop="@+id/linearLayout"
+        android:layout_marginRight="35dp"
+        android:orientation="vertical">
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fabNotes"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal" />
+
+        <TextView
+            android:id="@+id/textView7"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/notes"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/subjectLiner"
+        android:layout_marginLeft="35dp"
+        android:layout_marginTop="25dp"
+        android:orientation="vertical">
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fabHelp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal" />
+
+        <TextView
+            android:id="@+id/textView8"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/help"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:id="@+id/linearLayout2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/subjectLiner"
+        android:layout_centerHorizontal="true"
+        android:layout_marginLeft="35dp"
+        android:layout_marginTop="25dp"
+        android:orientation="vertical">
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fabAbout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal" />
+
+        <TextView
+            android:id="@+id/textView9"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/about"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignEnd="@+id/righLiner"
+        android:layout_alignTop="@+id/linearLayout2"
+        android:layout_marginRight="35dp"
+        android:orientation="vertical">
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fabNew"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal" />
+
+        <TextView
+            android:id="@+id/textView10"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/newpunkt"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
+    </LinearLayout>
+
+
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/backgroundProfile"
-        android:layout_marginLeft="10dp"
-        android:fontFamily="sans-serif-light"
-        android:text="@string/zero5"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textColor="@color/md_white_1000" />
+        android:layout_alignParentStart="true"
+        android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/textView3"
+        <TextView
+            android:id="@+id/textView4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="sans-serif-light"
+            android:text="@string/rate"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textColor="@color/md_white_1000" />
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:fontFamily="sans-serif-light"
+            android:text="@string/zero5"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textColor="@color/md_white_1000" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/righLiner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/backgroundProfile"
         android:layout_alignParentEnd="true"
-        android:fontFamily="sans-serif-light"
-        android:text="@string/zero"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textColor="@color/md_white_1000" />
+        android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/textView2"
-        android:layout_alignParentStart="true"
-        android:fontFamily="sans-serif-light"
-        android:text="@string/rate"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textColor="@color/md_white_1000" />
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="sans-serif-light"
+            android:text="@string/counr_subject"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textColor="@color/md_white_1000" />
 
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/textView3"
-        android:layout_alignParentEnd="true"
-        android:fontFamily="sans-serif-light"
-        android:text="@string/counr_subject"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textColor="@color/md_white_1000" />
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:fontFamily="sans-serif-light"
+            android:text="@string/zero"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textColor="@color/md_white_1000" />
+    </LinearLayout>
 
     <TextView
         android:id="@+id/nameTextView"
@@ -119,60 +225,6 @@
         android:fontFamily="sans-serif-light"
         android:text="Large Text"
         android:textAppearance="?android:attr/textAppearanceLarge" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Medium Text"
-        android:id="@+id/textView"
-        android:layout_below="@+id/fabSubject"
-        android:layout_toStartOf="@+id/profileImage" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Medium Text"
-        android:id="@+id/textView6"
-        android:layout_alignTop="@+id/textView"
-        android:layout_centerHorizontal="true" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Medium Text"
-        android:id="@+id/textView7"
-        android:layout_alignTop="@+id/textView6"
-        android:layout_toEndOf="@+id/textView6" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Medium Text"
-        android:id="@+id/textView8"
-        android:layout_below="@+id/fabMethodic"
-        android:layout_alignStart="@+id/textView" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Medium Text"
-        android:id="@+id/textView9"
-        android:layout_below="@+id/fabNew"
-        android:layout_centerHorizontal="true" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Medium Text"
-        android:id="@+id/textView10"
-        android:layout_below="@+id/fabNotes"
-        android:layout_alignStart="@+id/textView7" />
 
 
 </RelativeLayout>
