--- a/app/src/main/res/layout/predmet_card.xml
+++ b/app/src/main/res/layout/predmet_card.xml
@@ -66,7 +66,7 @@
             android:id="@+id/remindTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/methodicTextView"
+            android:layout_below="@+id/motivationValue"
             android:layout_marginLeft="5dp"
             android:layout_marginTop="5dp"
             android:text="@string/remind"
