--- a/app/src/main/res/layout/personal_layout.xml
+++ b/app/src/main/res/layout/personal_layout.xml
@@ -25,16 +25,18 @@
         android:id="@+id/subjectLiner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/nameTextView"
+        android:layout_alignTop="@+id/linearLayout"
         android:layout_marginLeft="35dp"
-        android:layout_marginTop="40dp"
         android:orientation="vertical">
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/fabSubject"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal" />
+            android:layout_gravity="center_horizontal"
+            android:background="@drawable/click_fab"
+            android:src="@drawable/ic_art_track_white_24dp"
+            android:clickable="true" />
 
         <TextView
             android:id="@+id/textSubject"
@@ -49,7 +51,7 @@
         android:id="@+id/linearLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/nameTextView"
+        android:layout_below="@+id/profileImage"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="40dp"
         android:orientation="vertical">
@@ -58,7 +60,10 @@
             android:id="@+id/fabMethodic"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal" />
+            android:layout_gravity="center_horizontal"
+            android:background="@drawable/click_fab"
+            android:src="@drawable/ic_view_list"
+            android:clickable="true" />
 
         <TextView
             android:id="@+id/textView6"
@@ -67,6 +72,16 @@
             android:text="@string/methodics"
             android:textAppearance="?android:attr/textAppearanceMedium" />
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/nameTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/profileImage"
+        android:layout_centerHorizontal="true"
+        android:fontFamily="sans-serif-light"
+        android:text="Large Text"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -80,7 +95,10 @@
             android:id="@+id/fabNotes"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal" />
+            android:layout_gravity="center_horizontal"
+            android:background="@drawable/click_fab"
+            android:clickable="true"
+            android:src="@drawable/ic_border_color" />
 
         <TextView
             android:id="@+id/textView7"
@@ -101,9 +119,12 @@
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/fabHelp"
+            android:src="@drawable/ic_help_white_24dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal" />
+            android:layout_gravity="center_horizontal"
+            android:background="@drawable/click_fab"
+            android:clickable="true" />
 
         <TextView
             android:id="@+id/textView8"
@@ -127,8 +148,11 @@
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/fabAbout"
             android:layout_width="wrap_content"
+            android:src="@drawable/ic_priority_high_white_24dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal" />
+            android:layout_gravity="center_horizontal"
+            android:background="@drawable/click_fab"
+            android:clickable="true" />
 
         <TextView
             android:id="@+id/textView9"
@@ -148,9 +172,12 @@
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/fabNew"
+            android:src="@drawable/ic_data_usage_white_24dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal" />
+            android:layout_gravity="center_horizontal"
+            android:background="@drawable/click_fab"
+            android:clickable="true" />
 
         <TextView
             android:id="@+id/textView10"
@@ -215,16 +242,6 @@
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:textColor="@color/md_white_1000" />
     </LinearLayout>
-
-    <TextView
-        android:id="@+id/nameTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/profileImage"
-        android:layout_centerHorizontal="true"
-        android:fontFamily="sans-serif-light"
-        android:text="Large Text"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
 
 
 </RelativeLayout>
