--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FFC107</color>
+    <color name="colorAccentProzr">#80FFC107</color>
     <color name="status_bar">#00695C</color>
     <color name="action_bar">#009688</color>
     <color name="action_bar_prozr">#80009688</color>
