--- a/app/src/main/res/layout/game_activity.xml
+++ b/app/src/main/res/layout/game_activity.xml
@@ -2,23 +2,23 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/gradient"
     android:orientation="vertical">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-
         android:layout_weight="1"
         android:fontFamily="sans-serif-light"
         android:text="Запам’ятовуйте числа!"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="@color/md_white_1000" />
 
     <TextView
         android:id="@+id/timer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
         android:layout_gravity="center_horizontal"
         android:fontFamily="sans-serif-light"
         android:textAppearance="?android:attr/textAppearanceLarge"
@@ -28,23 +28,27 @@
         android:id="@+id/progressBarGame"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
+        android:layout_gravity="center_horizontal" />
+
+    <View
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_weight="1" />
 
-
     <LinearLayout
+        android:id="@+id/line1Game"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
+        android:layout_margin="15dp"
         android:orientation="horizontal">
 
         <TextView
             android:id="@+id/game1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-
             android:text="Large Text"
-            android:textAppearance="?android:attr/textAppearanceLarge" />
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textColor="@color/md_white_1000" />
 
         <View
             android:layout_width="0dp"
@@ -56,7 +60,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Large Text"
-            android:textAppearance="?android:attr/textAppearanceLarge" />
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textColor="@color/md_white_1000" />
 
         <View
             android:layout_width="0dp"
@@ -68,13 +73,15 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Large Text"
-            android:textAppearance="?android:attr/textAppearanceLarge" />
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textColor="@color/md_white_1000" />
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/line2Game"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
+        android:layout_margin="15dp"
         android:orientation="horizontal">
 
         <TextView
@@ -82,7 +89,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Large Text"
-            android:textAppearance="?android:attr/textAppearanceLarge" />
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textColor="@color/md_white_1000" />
 
         <View
             android:layout_width="0dp"
@@ -94,7 +102,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Large Text"
-            android:textAppearance="?android:attr/textAppearanceLarge" />
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textColor="@color/md_white_1000" />
 
         <View
             android:layout_width="0dp"
@@ -106,13 +115,15 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Large Text"
-            android:textAppearance="?android:attr/textAppearanceLarge" />
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textColor="@color/md_white_1000" />
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/line3Game"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
+        android:layout_margin="15dp"
         android:orientation="horizontal">
 
         <TextView
@@ -120,7 +131,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Large Text"
-            android:textAppearance="?android:attr/textAppearanceLarge" />
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textColor="@color/md_white_1000" />
 
         <View
             android:layout_width="0dp"
@@ -132,7 +144,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Large Text"
-            android:textAppearance="?android:attr/textAppearanceLarge" />
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textColor="@color/md_white_1000" />
 
         <View
             android:layout_width="0dp"
@@ -144,25 +157,35 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Large Text"
-            android:textAppearance="?android:attr/textAppearanceLarge" />
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textColor="@color/md_white_1000" />
     </LinearLayout>
+
+
+    <EditText
+        android:id="@+id/editTextGame"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Введіть числа які ви запам’ятали"
+        android:textColor="@color/md_white_1000"
+        android:textColorHint="@color/md_white_1000" />
 
     <View
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_weight="1" />
+        android:layout_weight="3" />
 
     <Button
         android:id="@+id/buttonGameCheck"
         android:layout_width="140dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_margin="20dp"
-        android:background="@color/action_bar"
-        android:enabled="false"
-
+        android:layout_margin="50dp"
+        android:background="@drawable/click"
+        android:clickable="true"
         android:fontFamily="sans-serif-light"
         android:text="Перевірити"
-        android:textColor="@color/md_white_1000" />
+        android:textColor="@color/md_white_1000"
+        android:visibility="gone" />
 
 </LinearLayout>
