--- a/app/src/main/res/layout/methodic_layout.xml
+++ b/app/src/main/res/layout/methodic_layout.xml
@@ -78,16 +78,17 @@
 
                     <Button
                         android:id="@+id/checkButton"
-                        android:layout_width="wrap_content"
+                        android:layout_width="154dp"
                         android:layout_height="wrap_content"
                         android:layout_below="@+id/methodicDescription"
                         android:layout_centerHorizontal="true"
-                        android:layout_marginBottom="7dp"
                         android:background="@drawable/click"
                         android:clickable="true"
                         android:text="@string/check"
                         android:textColor="@color/md_white_1000"
-                        android:layout_gravity="center_horizontal" />
+                        android:layout_gravity="center_horizontal"
+                        android:layout_margin="20dp"
+                        android:textAlignment="center" />
                 </LinearLayout>
             </android.support.v7.widget.CardView>
         </RelativeLayout>
