--- a/app/src/main/res/layout/personal_layout.xml
+++ b/app/src/main/res/layout/personal_layout.xml
@@ -187,7 +187,7 @@
             android:layout_gravity="center_horizontal"
             android:background="@drawable/click_fab"
             android:clickable="true"
-            android:src="@drawable/ic_data_usage_white_24dp" />
+            android:src="@drawable/ic_logout" />
 
         <TextView
             android:id="@+id/textView10"
